fix rendering on mobile by specifiying viewport meta tag; fix margins and padding on body content; re-publish site

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-body { width: 100%; }
-div { width: 650px; font-size: 18px; font-family: garamond, georgia, serif; margin: auto; padding: 30px 0 50px 0; }
+body { width: 100%; margin: 0; }
+div { max-width: 670px; font-size: 18px; font-family: garamond, georgia, serif; margin: auto; padding: 20px 20px 50px 20px; }
 p { margin: 0 0 0 0; text-indent: 16px; text-align: justify; line-height: 22px; }
 ol, ul { margin: 4px 0 8px 0px; text-align: left; }
 li { line-height: 22px; }
